# sumpy

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  main.cpp  numpy_run.py  setup.py  sumpy.hpp  sumpy_module.cpp  sumpy_run.py
sumpy_pkg/: __init__.py
tests/: CMakeLists.txt  test_constructors.cpp  test_factory.cpp  test_indexing.cpp  test_printing.cpp  test_python_bindings.py  tests.cpp
tests/constructors/: CMakeLists.txt  test_constructors.cpp
tests/factory/: CMakeLists.txt  test_factory.cpp
tests/indexing/: CMakeLists.txt  test_indexing.cpp
tests/printing/: CMakeLists.txt  test_printing.cpp
